# Backtester

./: .gitignore  CMakeLists.txt  TODO.md
include/: order.hpp  portfolio.hpp
include/data/: bar.hpp  data_fetcher.hpp  detail.hpp
include/domain/: order.hpp  portfolio.hpp  ticker.hpp  timeframe.hpp
include/engine/: action.hpp  broker.hpp  engine.hpp
include/execution/: execution_model.hpp  fill.hpp  order_book.hpp
include/strategy/: strategy.hpp
scripts/: fetch_yf.py
src/: CMakeLists.txt  order.cpp  portfolio.cpp
src/data/: bar.cpp  data_fetcher.cpp  detail.cpp
src/domain/: order.cpp  portfolio.cpp  ticker.cpp
src/engine/: action.cpp  broker.cpp  engine.cpp
src/execution/: execution_model.cpp  fill.cpp  order_book.cpp
src/strategy/: strategy.cpp
tests/: CMakeLists.txt  test_data_fetcher.cpp  test_order.cpp  test_order_book.cpp  test_portfolio.cpp
tests/data/: test_bar.cpp  test_data_fetcher.cpp  test_detail.cpp
